Book and reverse controller developed, so many other things